syntax = "proto3";

option java_multiple_files = true;
option java_package = "exchange_rate.proto.gen";
option java_outer_classname = "ExchangeProto";

service ExchangeRatesProvider {
    rpc getExchangeRates (Currency) returns (stream ExchangeRate){}
}

enum CurrencyType {
    PLN = 0;
    EUR = 1;
    USD = 2;
}


message ExchangeRate {
    CurrencyType currency = 1;
    double rate = 2;
}

message Currency {
    repeated CurrencyType currency = 1;
}